second commit, getting the repo ready

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,11 +1,5 @@
-# List files or directories below to ignore them when running prettier
-# More information: https://prettier.io/docs/en/ignore.html
-#
-
-**/staticresources/**
-.localdevserver
-.sfdx
-.sf
-.vscode
-
+.all-contributorsrc
+.husky/
 coverage/
+lib/
+pnpm-lock.yaml
