--- a/.github/actions/prepare/action.yml
+++ b/.github/actions/prepare/action.yml
@@ -1,32 +1,18 @@
-description: Prepares the repo for a typical CI job
+name: "Prepare"
+description: "Prepares the repo for a typical CI job"
 
-name: Prepare
+runs:
+  using: "composite"
+  steps:
+    - uses: pnpm/action-setup@v4
+      with:
+        version: 9
 
-on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+    - uses: actions/setup-node@v4
+      with:
+        node-version: "20"
+        cache: "pnpm"
 
-jobs:
-  build-and-test:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: "Prepare"
-        uses: ./.github/actions/prepare
-
-      - name: "Install SFDX CLI"
-        run: |
-          npm install @salesforce/cli --global
-          sf --version
-
-      - name: "Lint"
-        run: pnpm lint
-
-      - name: "Prettier Check"
-        run: pnpm prettier:verify
-
-      - name: "Run Tests"
-        run: pnpm test
+    - name: Install dependencies
+      shell: bash
+      run: pnpm install
