--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,11 +20,40 @@ jobs:
           npm install @salesforce/cli --global
           sf --version
 
+      - name: "Check for LWC/Aura files"
+        id: check_files
+        run: |
+          if [ -d "force-app/main/default/lwc" ] || [ -d "force-app/main/default/aura" ]; then
+            echo "has_js_files=true" >> $GITHUB_OUTPUT
+          else
+            echo "has_js_files=false" >> $GITHUB_OUTPUT
+          fi
+
       - name: "Lint"
+        if: steps.check_files.outputs.has_js_files == 'true'
         run: pnpm lint
 
-      - name: "Prettier Check"
+      - name: "Format files"
+        run: pnpm prettier --write "**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,xml,yaml,yml}"
+
+      - name: "Commit formatting changes"
+        uses: stefanzweifel/git-auto-commit-action@v5
+        with:
+          commit_message: "style: format files with prettier"
+          branch: ${{ github.head_ref }}
+
+      - name: "Verify Formatting"
         run: pnpm prettier:verify
 
+      - name: "Check for tests"
+        id: check_tests
+        run: |
+          if [ -d "force-app/main/default/lwc/**/__tests__" ]; then
+            echo "has_tests=true" >> $GITHUB_OUTPUT
+          else
+            echo "has_tests=false" >> $GITHUB_OUTPUT
+          fi
+
       - name: "Run Tests"
+        if: steps.check_tests.outputs.has_tests == 'true'
         run: pnpm test
