--- a/package.json
+++ b/package.json
@@ -1,40 +1,46 @@
 {
-  "name": "salesforce-app",
-  "private": true,
-  "version": "1.0.0",
-  "description": "Salesforce App",
-  "scripts": {
-    "lint": "[ -d \"force-app/main/default/lwc\" ] && eslint \"**/lwc/**/*.js\" \"**/aura/**/*.js\" || echo \"No LWC/Aura files to lint\"",
-    "test": "npm run test:unit -- --passWithNoTests",
-    "test:unit": "sfdx-lwc-jest",
-    "test:unit:debug": "sfdx-lwc-jest --debug",
-    "test:unit:coverage": "sfdx-lwc-jest --coverage",
-    "prettier": "prettier --write \"**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,xml,yaml,yml}\"",
-    "prettier:verify": "prettier --check \"**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,xml,yaml,yml}\"",
-    "postinstall": "husky install",
-    "precommit": "lint-staged"
-  },
-  "devDependencies": {
-    "@lwc/eslint-plugin-lwc": "^1.1.2",
-    "@prettier/plugin-xml": "^3.2.2",
-    "@salesforce/eslint-config-lwc": "^3.2.3",
-    "@salesforce/eslint-plugin-aura": "^2.0.0",
-    "@salesforce/eslint-plugin-lightning": "^1.0.0",
-    "@salesforce/sfdx-lwc-jest": "^3.1.0",
-    "eslint": "^8.11.0",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-jest": "^27.6.0",
-    "husky": "^8.0.3",
-    "lint-staged": "^15.1.0",
-    "prettier": "^3.1.0",
-    "prettier-plugin-apex": "^2.0.1"
-  },
-  "lint-staged": {
-    "**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,xml,yaml,yml}": [
-      "prettier --write"
-    ],
-    "**/{aura,lwc}/**/*.js": [
-      "eslint"
-    ]
-  }
+	"name": "salesforce-app",
+	"version": "1.0.0",
+	"private": true,
+	"description": "Salesforce App",
+	"scripts": {
+		"postinstall": "husky install",
+		"lint": "[ -d \"force-app/main/default/lwc\" ] && eslint \"**/lwc/**/*.js\" \"**/aura/**/*.js\" || echo \"No LWC/Aura files to lint\"",
+		"precommit": "lint-staged",
+		"prettier": "prettier --write \"**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,xml,yaml,yml}\"",
+		"prettier:verify": "prettier --check \"**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,xml,yaml,yml}\"",
+		"test": "npm run test:unit -- --passWithNoTests",
+		"test:unit": "sfdx-lwc-jest",
+		"test:unit:coverage": "sfdx-lwc-jest --coverage",
+		"test:unit:debug": "sfdx-lwc-jest --debug"
+	},
+	"lint-staged": {
+		"**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,xml,yaml,yml}": [
+			"prettier --write"
+		],
+		"**/{aura,lwc}/**/*.js": [
+			"eslint"
+		]
+	},
+	"devDependencies": {
+		"@babel/eslint-parser": "^7.25.9",
+		"@babel/plugin-proposal-decorators": "^7.25.9",
+		"@lwc/eslint-plugin-lwc": "^1.8.2",
+		"@lwc/jest-preset": "^18.1.0",
+		"@prettier/plugin-xml": "^3.4.1",
+		"@salesforce/eslint-config-lwc": "^3.2.3",
+		"@salesforce/eslint-plugin-aura": "^2.0.0",
+		"@salesforce/eslint-plugin-lightning": "^1.0.0",
+		"@salesforce/sfdx-lwc-jest": "^3.1.0",
+		"eslint": "^8.11.0",
+		"eslint-plugin-import": "^2.25.4",
+		"eslint-plugin-jest": "^27.6.0",
+		"husky": "^8.0.3",
+		"jest": "^29.7.0",
+		"lint-staged": "^15.1.0",
+		"prettier": "^3.3.3",
+		"prettier-plugin-apex": "^2.2.0",
+		"prettier-plugin-packagejson": "^2.5.3",
+		"prettier-plugin-sh": "^0.14.0"
+	}
 }
