--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,23 @@
 	"editor.rulers": [80],
 	"eslint.probe": ["javascript", "json", "jsonc", "markdown", "yaml"],
 	"eslint.rules.customizations": [{ "rule": "*", "severity": "warn" }],
-	"eslint.useFlatConfig": true
+	"eslint.useFlatConfig": true,
+	"files.exclude": {
+		"**/.git": true,
+		"**/.svn": true,
+		"**/.hg": true,
+		"**/CVS": true,
+		"**/.DS_Store": true,
+		"**/Thumbs.db": true,
+		"**/.apivcs": true,
+		"**/.gitignore": true,
+		"**/.designer.json": true,
+		"**/.exchange.xml": true,
+		"**/.vscode": true,
+		"**/.mvn": true,
+		"**/.tmp": true,
+		"**/.settings": true,
+		"**/.exchange_modules_tmp": true,
+		".mule": true
+	}
 }
