--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -2,11 +2,12 @@
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
         <members>Utter_Sense_Voice_Call_Page</members>
+        <members>Utter_Sense_UtilityBar</members>
         <name>FlexiPage</name>
     </types>
     <types>
         <members>UtterSenseEinsteinLogo</members>
         <name>StaticResource</name>
     </types>
-    <version>61.0</version>
+    <version>62.0</version>
 </Package>
