--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -1,13 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
-    <types>
-        <members>Utter_Sense_Voice_Call_Page</members>
-        <members>Utter_Sense_UtilityBar</members>
-        <name>FlexiPage</name>
-    </types>
-    <types>
-        <members>UtterSenseEinsteinLogo</members>
-        <name>StaticResource</name>
-    </types>
-    <version>62.0</version>
+	<types>
+		<members>Utter_Sense_FAQ</members>
+		<name>genaiprompttemplate</name>
+	</types>
+	<version>62.0</version>
 </Package>
