--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -2,6 +2,7 @@
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
 	<types>
 		<members>Utter_Sense_FAQ</members>
+		<members>Utter_Sense_FAQ_2</members>
 		<name>genaiprompttemplate</name>
 	</types>
 	<version>62.0</version>
