Add CORS and CSP configurations for Google APIs
- Created new CORS whitelist origins for 'https://speech.googleapis.com' and 'https://www.google.com'.
- Added CSP trusted sites for Google APIs and Speech API, allowing microphone access and specifying applicable contexts.
- Updated package manifest to include new CORS and CSP configurations.

--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
 	<types>
-		<members>Utter_Sense_FAQ</members>
-		<members>Utter_Sense_FAQ_2</members>
-		<name>genaiprompttemplate</name>
+		<members>*</members>
+		<name>CspTrustedSite</name>
+	</types>
+	<types>
+		<members>*</members>
+		<name>CorsWhitelistOrigin</name>
 	</types>
 	<version>62.0</version>
 </Package>
