Enhance error handling and logging in WhisperService
- Introduced custom AudioRecorderError for more granular error tracking
- Added specific error codes for different types of audio recording and transcription errors
- Improved error handling in startRecording, getFinalTranscription, and real-time transcription methods
- Refactored error throwing to provide more context and detailed error information

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,5 +25,21 @@
 		"**/.settings": true,
 		"**/.exchange_modules_tmp": true,
 		".mule": true
-	}
+	},
+	"salesforcedx-vscode-core.show-cli-success-msg": false,
+	"css.validate": true,
+	"css.lint.emptyRules": "ignore",
+	"html.validate.styles": false,
+	"eslint.validate": ["javascript", "javascriptreact", "html"],
+	"[html]": {
+		"editor.defaultFormatter": "esbenp.prettier-vscode"
+	},
+	"[javascript]": {
+		"editor.defaultFormatter": "esbenp.prettier-vscode"
+	},
+	"[json]": {
+		"editor.defaultFormatter": "esbenp.prettier-vscode"
+	},
+	"prettier.documentSelectors": ["**/*.html", "**/*.js", "**/*.json"],
+	"prettier.requireConfig": true
 }
