Add AgentMessagingService and update AudioRecorderController
- Implemented AgentMessagingService with comprehensive JWT authentication and messaging methods
- Added methods for generating access tokens, creating conversations, and sending messages
- Updated AudioRecorderController to expose messaging service methods as Apex actions
- Refactored MessagingService in the LWC to use new Apex methods for bot interaction
- Enhanced error handling and logging across messaging-related components

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -20,6 +20,14 @@
 		{
 			"files": "*.{cmp,page,component}",
 			"options": { "parser": "html" }
+		},
+		{
+			"files": "*.cls",
+			"options": { "parser": "apex" }
+		},
+		{
+			"files": "*.cls-meta.xml",
+			"options": { "parser": "xml" }
 		}
 	]
 }
