--- a/package.json
+++ b/package.json
@@ -21,9 +21,7 @@
 		"test:unit:debug": "sfdx-lwc-jest --debug"
 	},
 	"lint-staged": {
-		"**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,xml,yaml,yml}": [
-			"prettier --write"
-		]
+		"**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,xml,yaml,yml}": []
 	},
 	"devDependencies": {
 		"@babel/eslint-parser": "^7.25.9",
