Refactor AudioRecorder with ConversationStateService and EventSourceService
- Introduced ConversationStateService to centralize conversation state management
- Added EventSourceService for handling platform event-based messaging
- Updated MessagingService to use new EventSourceService for real-time message handling
- Simplified message and transcription management in AudioRecorder
- Enhanced logging and error handling across new services
- Removed redundant message and conversation tracking methods

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,5 +41,8 @@
 		"editor.defaultFormatter": "esbenp.prettier-vscode"
 	},
 	"prettier.documentSelectors": ["**/*.html", "**/*.js", "**/*.json"],
-	"prettier.requireConfig": true
+	"prettier.requireConfig": true,
+	"[xml]": {
+		"editor.defaultFormatter": "redhat.vscode-xml"
+	}
 }
