--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,33 +1,52 @@
 {
-	"$schema": "http://json.schemastore.org/prettierrc",
-	"useTabs": true,
-	"trailingComma": "none",
-	"plugins": [
-		"prettier-plugin-sh",
-		"prettier-plugin-packagejson",
-		"prettier-plugin-apex",
-		"@prettier/plugin-xml"
-	],
-	"overrides": [
-		{
-			"files": ".nvmrc",
-			"options": { "parser": "yaml" }
-		},
-		{
-			"files": "**/lwc/**/*.html",
-			"options": { "parser": "lwc" }
-		},
-		{
-			"files": "*.{cmp,page,component}",
-			"options": { "parser": "html" }
-		},
-		{
-			"files": "*.cls",
-			"options": { "parser": "apex" }
-		},
-		{
-			"files": "*.cls-meta.xml",
-			"options": { "parser": "xml" }
-		}
-	]
+    "$schema": "http://json.schemastore.org/prettierrc",
+    "useTabs": false,
+    "trailingComma": "none",
+    "tabWidth": 4,
+    "semi": true,
+    "singleQuote": true,
+    "printWidth": 120,
+    "bracketSpacing": true,
+    "endOfLine": "lf",
+    "plugins": ["prettier-plugin-apex", "@prettier/plugin-xml"],
+    "overrides": [
+        {
+            "files": ".nvmrc",
+            "options": { "parser": "yaml" }
+        },
+        {
+            "files": "**/lwc/**/*.html",
+            "options": {
+                "parser": "lwc",
+                "singleQuote": false,
+                "bracketSameLine": true,
+                "htmlWhitespaceSensitivity": "css",
+                "bracketSpacing": false,
+                "printWidth": 120
+            }
+        },
+        {
+            "files": "*.{cmp,page,component}",
+            "options": {
+                "parser": "html",
+                "singleQuote": false
+            }
+        },
+        {
+            "files": "*.{cls,trigger,apex}",
+            "options": {
+                "parser": "apex",
+                "printWidth": 120,
+                "tabWidth": 4
+            }
+        },
+        {
+            "files": "*.cls",
+            "options": { "parser": "apex" }
+        },
+        {
+            "files": "*.cls-meta.xml",
+            "options": { "parser": "xml" }
+        }
+    ]
 }
