--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
 		"@babel/plugin-proposal-decorators": "^7.25.9",
 		"@lwc/eslint-plugin-lwc": "^2.0.0",
 		"@lwc/jest-preset": "^18.1.0",
-		"@prettier/plugin-xml": "^3.4.1",
+		"@prettier/plugin-xml": "^2.2.0",
 		"@salesforce/eslint-config-lwc": "^3.5.0",
 		"@salesforce/eslint-plugin-aura": "^2.1.0",
 		"@salesforce/eslint-plugin-lightning": "^1.0.0",
@@ -41,9 +41,12 @@
 		"husky": "^8.0.3",
 		"jest": "^29.7.0",
 		"lint-staged": "^15.1.0",
-		"prettier": "^3.3.3",
-		"prettier-plugin-apex": "^2.2.0",
+		"prettier": "^2.8.8",
+		"prettier-plugin-apex": "^1.13.0",
 		"prettier-plugin-packagejson": "^2.5.3",
 		"prettier-plugin-sh": "^0.14.0"
+	},
+	"dependencies": {
+		"event-source-polyfill": "^1.0.31"
 	}
 }
