Add Utter Sense FAQ Agent configuration and routing components
- Configured Embedded Service Config for Utter Sense FAQ messaging channel
- Added bot configuration for Utter Sense FAQ Agent with initial dialogs
- Created routing flow for messaging sessions to Utter Sense FAQ Agent
- Introduced Gen AI Planner and Prompt Template for conversational AI support
- Updated remote site settings for new domain and external API integrations
- Included necessary package.xml updates for new metadata components

--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -4,5 +4,38 @@
 		<members>eventSourcePolyfill</members>
 		<name>StaticResource</name>
 	</types>
+	<types>
+		<members>openai_whisper</members>
+		<members>Utter_Sense_SCRT_Domain</members>
+		<name>RemoteSiteSetting</name>
+	</types>
+	<types>
+		<members>Utter_Sense_FAQ_Agent_Router</members>
+		<name>Flow</name>
+	</types>
+	<types>
+		<members>*</members>
+		<name>ConversationMessageDefinition</name>
+	</types>
+	<types>
+		<members>Utter_Sense_ES</members>
+		<name>EmbeddedServiceConfig</name>
+	</types>
+	<types>
+		<members>Utter_Sense_FAQ_Agent</members>
+		<name>bot</name>
+	</types>
+	<types>
+		<members>*</members>
+		<name>genaifunction</name>
+	</types>
+	<types>
+		<members>Utter_Sense_FAQ</members>
+		<name>genaiprompttemplate</name>
+	</types>
+	<types>
+		<members>Utter_Sense_FAQ_Agent</members>
+		<name>genaiplanner</name>
+	</types>
 	<version>62.0</version>
 </Package>
