--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
 	<types>
+		<members>Utter_Sense_FAQ</members>
+		<name>MessagingChannel</name>
+	</types>
+	<types>
 		<members>eventSourcePolyfill</members>
 		<name>StaticResource</name>
 	</types>
@@ -34,8 +38,20 @@
 		<name>genaiprompttemplate</name>
 	</types>
 	<types>
+		<members>*</members>
+		<name>genaiplugin</name>
+	</types>
+		<types>
+		<members>*</members>
+		<name>genaiprompttemplateactv</name>
+	</types>
+	<types>
 		<members>Utter_Sense_FAQ_Agent</members>
 		<name>genaiplanner</name>
 	</types>
-	<version>62.0</version>
+	<types>
+		<members>Utter_Sense_Certificate</members>
+		<name>Certificate</name>
+	</types>
+	<version>63.0</version>
 </Package>
