Update messaging configuration and service endpoints
- Updated base URL and org ID for EventSourceService and AgentMessagingService
- Simplified WhisperService transcription logic and removed complex buffering
- Refined AudioRecorder message handling and transcription processing
- Added Messaging Queue for MessagingSession routing
- Updated package.xml to include new Queue metadata

--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -53,5 +53,9 @@
 		<members>Utter_Sense_Certificate</members>
 		<name>Certificate</name>
 	</types>
-	<version>63.0</version>
+	<types>
+		<members>Messaging_Queue</members>
+		<name>Queue</name>
+	</types>
+	<version>62.0</version>
 </Package>
