Update README and project configuration for Utter Sense deployment
- Enhanced README prerequisites with detailed feature and permission requirements
- Updated scratch org configuration to enable Einstein 1, Live Agent, and GPT features
- Refined AudioRecorder component styling with icon-based buttons and improved UX
- Added SVG icons for microphone and stop recording buttons
- Improved empty conversation messaging and interaction flow

--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -1,13 +1,16 @@
 {
-	"orgName": "valon.loshaj company",
-	"edition": "Developer",
-	"features": ["EnableSetPasswordInApi"],
-	"settings": {
-		"lightningExperienceSettings": {
-			"enableS1DesktopEnabled": true
-		},
-		"mobileSettings": {
-			"enableS1EncryptedStoragePref2": false
-		}
-	}
+    "orgName": "Utter Sense Sandbox",
+    "edition": "Developer",
+    "features": ["EnableSetPasswordInApi, Einstein1AIPlatform", "LiveAgent", "LiveMessage", "LightningServiceConsole"],
+    "settings": {
+        "lightningExperienceSettings": {
+            "enableS1DesktopEnabled": true
+        },
+        "mobileSettings": {
+            "enableS1EncryptedStoragePref2": false
+        },
+        "einsteinGptSettings": {
+            "enableEinsteinGptPlatform": true
+        }
+    }
 }
