Add Knowledge Base Data Importer for Otera Medication FAQs
- Created KnowledgeDataImporter Apex class to import and publish knowledge articles
- Added static resource with Otera medication knowledge base content
- Implemented robust error handling and logging for article import process
- Configured package.xml to include new static resource
- Prepared 10 detailed knowledge articles covering Otera medication topics

--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -6,6 +6,7 @@
 	</types>
 	<types>
 		<members>eventSourcePolyfill</members>
+		<members>utter_sense_knowledge_data</members>
 		<name>StaticResource</name>
 	</types>
 	<types>
